Adjusting fail detector threshold